# progettofinale-travel-agent-api

./: .env.example  .gitignore  01. Travel Agent - Introduzione.md  02. Travel Agent - Setup del progetto.md  03. Travel Agent - API di base.md  04. Travel Agent - Tools.md  05. Travel Agent - Servizio Agent.md  06. Travel Agent - Esecuzione.md  README.md  _extracted_pdfs.txt  extract_01. Travel Agent - Introduzione.txt  extract_02. Travel Agent - Setup del progetto.txt  extract_03. Travel Agent - API di base.txt  extract_04. Travel Agent - Tools.txt  extract_05. Travel Agent - Servizio Agent.txt  extract_06. Travel Agent - Esecuzione.txt  pdf02.txt  pyproject.toml
travel_agent_api/: main.py
travel_agent_api/routes/: chat_router.py
travel_agent_api/services/: agent_service.py
travel_agent_api/tools/: chain_historical_expert.py  chain_travel_plan.py  flights_finder.py  hotels_finder.py
