[project]
name = "travel-agent-api"
version = "0.1.0"
description = "Travel Agent API - assistente viaggi con FastAPI e LangChain"
authors = [
    {name = "Marco", email = "marcotemperato@users.noreply.github.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.138.1,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "openai (>=2.44.0,<3.0.0)",
    "langchain-openai (>=1.3.3,<2.0.0)",
    "langchain-community (>=0.4.2,<0.5.0)",
    "langgraph (>=1.2.6,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "google-search-results (>=2.4.2,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "travel_agent_api" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
